Restructuring HTML. Add main element.

--- a/blog.html
+++ b/blog.html
@@ -1,93 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
+	<head>
+		<title>Cara Delevingne Fansite</title>
+
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+
+		<link rel="stylesheet" href="./css/reset.css" />
+		<link rel="stylesheet" href="./css/basic.css" />
+	</head>
 	
-	<!-- Title -->
-	<title>Cara Delevingne Fansite</title>
+	<body>
 
-	<!-- Meta Tags -->
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-
-	<!-- CSS Links -->
-	<link rel="stylesheet" href="./css/reset.css" />
-	<link rel="stylesheet" href="./css/basic.css" />
-
-</head>
-<body>
-
-	<!-- Header -->
-	<header class="scrollable">
-		<h1>Cara Delevingne</h1>
-	</header>
-
-	<!-- Content -->
-	<section>
-		
-		<aside>
-			<h2>About The Blog</h2>
-			<p>This blog is about Cara Delevingne and different news about her as well as all the weird opinions I have about her type of model. Feel free to contact me, if you have some news about her og you just want to say hi.</p>
-
-			<h2>Archive</h2>
-			<h3>2015</h3>
-			<ul>
-				<li>September (1)</li>
-				<li>August (4)</li>
-				<li>July (4)</li>
-				<li>June (4)</li>
-			</ul>
-		</aside>
-
-		<article id="two">
-
-			<!-- Blog Post 1 -->
-			<div class="blogpost">
-				<h2>Cara's in Paper Towns</h2>
-				<p class="date">September 2, 2015</p>
-				<img src="./img/other/papertowns.jpg" alt="Cara in Paper Towns" />
-				<div class="content">
-					<p>It is not a new thing that Cara is acting, but it certainly is a big thing that she happens to be in the new movie adaption of the John Green book called 'Paper Towns'.</p>
-					<p>Now you are probably thinking, why do I have to know who wrote the book behind the movie that Cara is in, but I'm going to stop you right there. Because IF YOU DON'T KNOW WHO JOHN GREEN IS AND WHAT HE WRITES I SUGGEST YOU GO READ HIS BOOK BEFORE WATCHING THE MOVIE.</p>
-					<p class="lastline">Anywho, this is an exceptional story and Cara does a great job trying to interpret Margo, the mysterious neighbour and long time crush of Q. Q, which is short for Quentin, is nothing but a...</p>
-				</div>
-				<a href="#">Read more</a>
-			</div>
-
-			<!-- Blog Post 2 -->
-			<div class="blogpost">
-				<h2>Cara and Kate are best friends</h2>
-				<p class="date">August 20, 2015</p>
-				<img src="./img/other/caraandkate.jpg" alt="Cara Delevingne and Kate Moss" />
-				<div class="content">
-					<p>The recent photoshoot for the happening in Milan that both Cara and Kate are going to has made the two women the best of friends, says close relatives to Cara.</p>
-					<p>"They really had fun at the photoshoot and I know they are hanging out whenever they can," says photographer Max Millian. He took the amazing photos that are now on display everywhere in the cosy italian city.</p>
-					<p class="lastline">It is also rumored that there might be another photographic adventure for the two girls in the nearer future. Max Millian, though, will not confirm og dismiss any of this. In fact he...</p>
-				</div>
-				<a href="#">Read more</a>
-			</div>
-
-			<!-- Blog Post 3 -->
-			<div class="blogpost">
-				<h2>Cara on The Tonight Show</h2>
-				<p class="date">August 14, 2015</p>
-				<img src="./img/other/jimmyfallon.jpg" alt="Cara Delevingne with Jimmy Fallon" />
-				<div class="content">
-					<p>Did anyone see Cara on The Tonight Show yesterday? Because I sure did and I have a numorous things to say about that episode. Cara rightout owned that show. Not only because she was awesome as always, but because she showed off her non-model skills.</p>
-					<p class="lastline">The reason I love Cara is because she might be a model, but she's got the attitude of a rebel. A lot of models win on their beautiful and ladylike manner (and they should too), but nobody pulls of the street like Cara. Yesterday's show was a proof of that and...</p>
-				</div>
-				<a href="#">Read more</a>
-			</div>
-
-		</article>
-	</section>
-
-	<!-- Footer -->
-	<footer class="scrollable">
-		<p>&copy; Mariann Madsen 2015</p>
-	</footer>
-
-	<!-- Navigation -->
-	<a id="nav-toggle" href="#"><span></span></a>
+		<a id="nav-toggle" href="#"><span></span></a>
 		<nav id="nav" class="scrollable">
 			<ul>
 				<li><a href="./index.html">Home</a></li>
@@ -97,8 +22,76 @@
 			</ul>
 		</nav>
 
-	<!-- JavaScript Link -->
-	<script src="./js/script.js"></script>
+		<header class="scrollable">
+			<h1>Cara Delevingne</h1>
+		</header>
 
-</body>
+		<main>
+			<section>
+
+				<aside>
+					<h2>About The Blog</h2>
+					<p>This blog is about Cara Delevingne and different news about her as well as all the weird opinions I have about her type of model. Feel free to contact me, if you have some news about her og you just want to say hi.</p>
+
+					<h2>Archive</h2>
+					<h3>2015</h3>
+					<ul>
+						<li>September (1)</li>
+						<li>August (4)</li>
+						<li>July (4)</li>
+						<li>June (4)</li>
+					</ul>
+				</aside>
+
+				<article id="two">
+
+					<!-- Blog Post 1 -->
+					<div class="blogpost">
+						<h2>Cara's in Paper Towns</h2>
+						<p class="date">September 2, 2015</p>
+						<img src="./img/other/papertowns.jpg" alt="Cara in Paper Towns" />
+						<div class="content">
+							<p>It is not a new thing that Cara is acting, but it certainly is a big thing that she happens to be in the new movie adaption of the John Green book called 'Paper Towns'.</p>
+							<p>Now you are probably thinking, why do I have to know who wrote the book behind the movie that Cara is in, but I'm going to stop you right there. Because IF YOU DON'T KNOW WHO JOHN GREEN IS AND WHAT HE WRITES I SUGGEST YOU GO READ HIS BOOK BEFORE WATCHING THE MOVIE.</p>
+							<p class="lastline">Anywho, this is an exceptional story and Cara does a great job trying to interpret Margo, the mysterious neighbour and long time crush of Q. Q, which is short for Quentin, is nothing but a...</p>
+						</div>
+						<a href="#">Read more</a>
+					</div>
+
+					<!-- Blog Post 2 -->
+					<div class="blogpost">
+						<h2>Cara and Kate are best friends</h2>
+						<p class="date">August 20, 2015</p>
+						<img src="./img/other/caraandkate.jpg" alt="Cara Delevingne and Kate Moss" />
+						<div class="content">
+							<p>The recent photoshoot for the happening in Milan that both Cara and Kate are going to has made the two women the best of friends, says close relatives to Cara.</p>
+							<p>"They really had fun at the photoshoot and I know they are hanging out whenever they can," says photographer Max Millian. He took the amazing photos that are now on display everywhere in the cosy italian city.</p>
+							<p class="lastline">It is also rumored that there might be another photographic adventure for the two girls in the nearer future. Max Millian, though, will not confirm og dismiss any of this. In fact he...</p>
+						</div>
+						<a href="#">Read more</a>
+					</div>
+
+					<!-- Blog Post 3 -->
+					<div class="blogpost">
+						<h2>Cara on The Tonight Show</h2>
+						<p class="date">August 14, 2015</p>
+						<img src="./img/other/jimmyfallon.jpg" alt="Cara Delevingne with Jimmy Fallon" />
+						<div class="content">
+							<p>Did anyone see Cara on The Tonight Show yesterday? Because I sure did and I have a numorous things to say about that episode. Cara rightout owned that show. Not only because she was awesome as always, but because she showed off her non-model skills.</p>
+							<p class="lastline">The reason I love Cara is because she might be a model, but she's got the attitude of a rebel. A lot of models win on their beautiful and ladylike manner (and they should too), but nobody pulls of the street like Cara. Yesterday's show was a proof of that and...</p>
+						</div>
+						<a href="#">Read more</a>
+					</div>
+
+				</article>
+			</section>
+		</main>
+
+		<footer class="scrollable">
+			<p>&copy; Mariann Madsen 2015</p>
+		</footer>
+
+		<script src="./js/script.js"></script>
+
+	</body>
 </html>
