--- a/contact.html
+++ b/contact.html
@@ -1,74 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-	
-	<!-- Title -->
-	<title>Cara Delevingne Fansite</title>
+	<head>
+		<title>Cara Delevingne Fansite</title>
 
-	<!-- Meta Tags -->
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<!-- CSS Links -->
-	<link rel="stylesheet" href="./css/reset.css" />
-	<link rel="stylesheet" href="./css/basic.css" />
+		<link rel="stylesheet" href="./css/reset.css" />
+		<link rel="stylesheet" href="./css/basic.css" />
+	</head>
 
-</head>
-<body>
+	<body>
 
-	<!-- Header -->
-	<header>
-		<h1>Cara Delevingne</h1>
-	</header>
-
-	<!-- Content -->
-	<section>
-		<article id="four">
-			<h2>Contact me</h2>
-			
-			<form action="action_page.php" method="post">
-
-				<div class="labelinput" id="yourname">
-					<input type="text" name="name" placeholder="Name" required>
-				</div>
-
-				<div class="labelinput" id="youremail">
-					<input type="text" name="email" placeholder="Email" required>
-				</div>
-
-				<div class="labelinput" id="yoursubject">
-					<input type="text" name="email" placeholder="Subject" required>
-				</div>
-
-				<div class="labelinput" id="yourmessage">
-					<textarea id="textbox" name="message" placeholder="Write your message here"></textarea>
-				</div>
-
-				<div class="labelinput" id="yourtellme">
-					<label>How big a fan of Cara are you?</label>
-					<select id="selectbox" required>
-						<option value="Huge Fan" selected>Huge Fan</option>
-					  	<option value="Regular Fan">Regular Fan</option>
-					  	<option value="Quiet Fan">Quiet Fan</option>
-					</select>
-				</div>
-
-				<div class="labelinput" id="yourbutton">
-					<input id="submitbutton" type="submit" value="Submit">
-				</div>
-
-			</form>
-
-		</article>
-	</section>
-
-	<!-- Footer -->
-	<footer>
-		<p>&copy; Mariann Madsen 2015</p>
-	</footer>
-
-	<!-- Navigation -->
-	<a id="nav-toggle" href="#"><span></span></a>
+		<a id="nav-toggle" href="#"><span></span></a>
 		<nav id="nav">
 			<ul>
 				<li><a href="./index.html">Home</a></li>
@@ -78,8 +22,57 @@
 			</ul>
 		</nav>
 
-	<!-- JavaScript Link -->
-	<script src="./js/script.js"></script>
+		<header>
+			<h1>Cara Delevingne</h1>
+		</header>
 
-</body>
+		<main>
+			<section>
+				<article id="four">
+					<h2>Contact me</h2>
+
+					<form action="action_page.php" method="post">
+
+						<div class="labelinput" id="yourname">
+							<input type="text" name="name" placeholder="Name" required>
+						</div>
+
+						<div class="labelinput" id="youremail">
+							<input type="text" name="email" placeholder="Email" required>
+						</div>
+
+						<div class="labelinput" id="yoursubject">
+							<input type="text" name="email" placeholder="Subject" required>
+						</div>
+
+						<div class="labelinput" id="yourmessage">
+							<textarea id="textbox" name="message" placeholder="Write your message here"></textarea>
+						</div>
+
+						<div class="labelinput" id="yourtellme">
+							<label>How big a fan of Cara are you?</label>
+							<select id="selectbox" required>
+								<option value="Huge Fan" selected>Huge Fan</option>
+							  	<option value="Regular Fan">Regular Fan</option>
+							  	<option value="Quiet Fan">Quiet Fan</option>
+							</select>
+						</div>
+
+						<div class="labelinput" id="yourbutton">
+							<input id="submitbutton" type="submit" value="Submit">
+						</div>
+
+					</form>
+
+				</article>
+			</section>
+		</main>
+
+		<footer>
+			<p>&copy; Mariann Madsen 2015</p>
+		</footer>
+
+		<script src="./js/script.js"></script>
+
+	</body>
 </html>
