--- a/gallery.html
+++ b/gallery.html
@@ -1,66 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
+    <head>
+    	<title>Cara Delevingne Fansite</title>
 
-	<!-- Title -->
-    <title>Cara Delevingne Fansite</title>
+    	<meta charset="utf-8">
+    	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Meta Tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    	<link rel="stylesheet" href="./css/reset.css" />
+    	<link rel="stylesheet" href="./css/basic.css" />
+    </head>
 
-    <!-- CSS Links -->
-    <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/basic.css" />
+    <body>
 
-</head>
-<body>
-
-    <!-- Header -->
-    <header>
-        <h1>Cara Delevingne</h1>
-    </header>
-
-    <!-- Content -->
-    <section>
-    	<article id="three">
-            <h2>Gallery</h2>
-
-        	<!-- Gallery List-->
-            <div id="gallerysection">
-
-                <!-- Gallery 1 -->
-                <ul class="sectionlist" id="runway">
-                    <li>
-                        <a href="./runway.html">
-                            <img src="./img/other/teaser1.jpg" alt="Cara Delevingne on Runway" />
-                            <span class="text-content"><span class="span1">Runway</span></span>
-                        </a>
-                    </li>
-                </ul>
-
-                <!-- Gallery 2 -->
-                <ul class="sectionlist" id="random">
-                    <li>
-                        <a href="./random.html">
-                            <img src="./img/other//teaser2.jpg" alt="Cara Delevingne on Runway" />
-                            <span class="text-content"><span class="span1">Random</span></span>
-                        </a>
-                    </li>
-                </ul>
-
-            </div> <!-- End of Gallery List -->
-
-        </article>
-    </section>
-
-    <!-- Footer -->
-    <footer>
-        <p>&copy; Mariann Madsen 2015</p>
-    </footer>
-
-    <!-- Navigation -->
-    <a id="nav-toggle" href="#"><span></span></a>
+        <a id="nav-toggle" href="#"><span></span></a>
         <nav id="nav">
             <ul>
                 <li><a href="./index.html">Home</a></li>
@@ -70,8 +22,49 @@
             </ul>
         </nav>
 
-    <!-- JavaScript Link -->
-    <script src="./js/script.js"></script>
+        <header>
+            <h1>Cara Delevingne</h1>
+        </header>
 
-</body>
+        <main>
+            <section>
+            	<article id="three">
+                    <h2>Gallery</h2>
+
+                	<!-- Gallery List-->
+                    <div id="gallerysection">
+
+                        <!-- Gallery 1 -->
+                        <ul class="sectionlist" id="runway">
+                            <li>
+                                <a href="./runway.html">
+                                    <img src="./img/other/teaser1.jpg" alt="Cara Delevingne on Runway" />
+                                    <span class="text-content"><span class="span1">Runway</span></span>
+                                </a>
+                            </li>
+                        </ul>
+
+                        <!-- Gallery 2 -->
+                        <ul class="sectionlist" id="random">
+                            <li>
+                                <a href="./random.html">
+                                    <img src="./img/other//teaser2.jpg" alt="Cara Delevingne on Runway" />
+                                    <span class="text-content"><span class="span1">Random</span></span>
+                                </a>
+                            </li>
+                        </ul>
+
+                    </div> <!-- End of Gallery List -->
+
+                </article>
+            </section>
+        </main>
+
+        <footer>
+            <p>&copy; Mariann Madsen 2015</p>
+        </footer>
+
+        <script src="./js/script.js"></script>
+
+    </body>
 </html>
