--- a/index.html
+++ b/index.html
@@ -1,41 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
+	<head>
+		<title>Cara Delevingne Fansite</title>
 
-	<!-- Title -->
-	<title>Cara Delevingne Fansite</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<!-- Meta Tags -->
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="./css/reset.css" />
+		<link rel="stylesheet" href="./css/basic.css" />
+	</head>
 
-	<!-- CSS Links -->
-	<link rel="stylesheet" href="./css/reset.css" />
-	<link rel="stylesheet" href="./css/basic.css" />
+	<body>
 
-</head>
-<body>
-
-	<!-- Header -->
-	<header>
-		<h1>Cara Delevingne</h1>
-	</header>
-
-	<!-- Content -->
-	<section>
-		<article id="one">
-			<img id="home1" src="./img/other/home_image1.jpg" alt="Cara Delevingne">
-			<img id="home2" src="./img/other/home_image2.jpg" alt="Cara Delevingne">
-		</article>
-	</section>
-
-	<!-- Footer -->
-	<footer>
-		<p>&copy; Mariann Madsen 2015</p>
-	</footer>
-
-	<!-- Navigation -->
-	<a id="nav-toggle" href="#"><span></span></a>
+		<a id="nav-toggle" href="#"><span></span></a>
 		<nav id="nav">
 			<ul>
 				<li><a href="./index.html">Home</a></li>
@@ -45,8 +22,24 @@
 			</ul>
 		</nav>
 
-	<!-- JavaScript Link -->
-	<script src="./js/script.js"></script>
+		<header>
+			<h1>Cara Delevingne</h1>
+		</header>
 
-</body>
+		<main>
+			<section>
+				<article id="one">
+					<img id="home1" src="./img/other/home_image1.jpg" alt="Cara Delevingne">
+					<img id="home2" src="./img/other/home_image2.jpg" alt="Cara Delevingne">
+				</article>
+			</section>
+		</main>
+
+		<footer>
+			<p>&copy; Mariann Madsen 2015</p>
+		</footer>
+
+		<script src="./js/script.js"></script>
+
+	</body>
 </html>
