--- a/runway.html
+++ b/runway.html
@@ -1,64 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
+	<head>
+		<title>Cara Delevingne Fansite</title>
 
-	<!-- Title -->
-	<title>Cara Delevingne Fansite</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<!-- Meta Tags -->
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="./css/reset.css" />
+		<link rel="stylesheet" href="./css/basic.css" />
+	</head>
+	
+	<body>
 
-	<!-- CSS Links -->
-	<link rel="stylesheet" href="./css/reset.css" />
-	<link rel="stylesheet" href="./css/basic.css" />
-
-</head>
-<body>
-
-	<!-- Header -->
-	<header class="scrollable">
-		<h1>Cara Delevingne</h1>
-	</header>
-
-	<!-- Content -->
-	<section>
-		<article id="subthree">
-
-			<!-- First 10 images -->
-			<figure><img src="./img/rw/rw1.jpg" alt="Cara Delevingne on Runway" /></figure>
-			<figure><img src="./img/rw/rw2.jpg" alt="Cara Delevingne on Runway" /></figure>
-			<figure><img src="./img/rw/rw3.jpg" alt="Cara Delevingne on Runway" /></figure>
-			<figure><img src="./img/rw/rw4.jpg" alt="Cara Delevingne on Runway" /></figure>
-			<figure><img src="./img/rw/rw5.jpg" alt="Cara Delevingne on Runway" /></figure>
-			<figure><img src="./img/rw/rw6.jpg" alt="Cara Delevingne on Runway" /></figure>
-			<figure><img src="./img/rw/rw7.jpg" alt="Cara Delevingne on Runway" /></figure>
-			<figure><img src="./img/rw/rw8.jpg" alt="Cara Delevingne on Runway" /></figure>
-			<figure><img src="./img/rw/rw9.jpg" alt="Cara Delevingne on Runway" /></figure>
-			<figure><img src="./img/rw/rw10.jpg" alt="Cara Delevingne on Runway" /></figure>
-
-			<!-- Last 10 images -->
-			<figure><img src="./img/rw/rw11.jpg" alt="Cara Delevingne on Runway" /></figure>
-			<figure><img src="./img/rw/rw12.jpg" alt="Cara Delevingne on Runway" /></figure>
-			<figure><img src="./img/rw/rw13.jpg" alt="Cara Delevingne on Runway" /></figure>
-			<figure><img src="./img/rw/rw14.jpg" alt="Cara Delevingne on Runway" /></figure>
-			<figure><img src="./img/rw/rw15.jpg" alt="Cara Delevingne on Runway" /></figure>
-			<figure><img src="./img/rw/rw16.jpg" alt="Cara Delevingne on Runway" /></figure>
-			<figure><img src="./img/rw/rw17.jpg" alt="Cara Delevingne on Runway" /></figure>
-			<figure><img src="./img/rw/rw18.jpg" alt="Cara Delevingne on Runway" /></figure>
-			<figure><img src="./img/rw/rw19.jpg" alt="Cara Delevingne on Runway" /></figure>
-			<figure><img src="./img/rw/rw20.jpg" alt="Cara Delevingne on Runway" /></figure>
-
-		</article>
-	</section>
-
-  	<!-- Footer -->
-	<footer class="scrollable">
-		<p>&copy; Mariann Madsen 2015</p>
-	</footer>
-
-	<!-- Navigation -->
-	<a id="nav-toggle" href="#"><span></span></a>
+		<a id="nav-toggle" href="#"><span></span></a>
 		<nav id="nav" class="scrollable">
 			<ul>
 				<li><a href="./index.html">Home</a></li>
@@ -68,8 +22,47 @@
 			</ul>
 		</nav>
 
-	<!-- JavaScript Link -->
-	<script src="./js/script.js"></script>
+		<header class="scrollable">
+			<h1>Cara Delevingne</h1>
+		</header>
 
-</body>
+		<main>
+			<section>
+				<article id="subthree">
+
+					<!-- First 10 images -->
+					<figure><img src="./img/rw/rw1.jpg" alt="Cara Delevingne on Runway" /></figure>
+					<figure><img src="./img/rw/rw2.jpg" alt="Cara Delevingne on Runway" /></figure>
+					<figure><img src="./img/rw/rw3.jpg" alt="Cara Delevingne on Runway" /></figure>
+					<figure><img src="./img/rw/rw4.jpg" alt="Cara Delevingne on Runway" /></figure>
+					<figure><img src="./img/rw/rw5.jpg" alt="Cara Delevingne on Runway" /></figure>
+					<figure><img src="./img/rw/rw6.jpg" alt="Cara Delevingne on Runway" /></figure>
+					<figure><img src="./img/rw/rw7.jpg" alt="Cara Delevingne on Runway" /></figure>
+					<figure><img src="./img/rw/rw8.jpg" alt="Cara Delevingne on Runway" /></figure>
+					<figure><img src="./img/rw/rw9.jpg" alt="Cara Delevingne on Runway" /></figure>
+					<figure><img src="./img/rw/rw10.jpg" alt="Cara Delevingne on Runway" /></figure>
+
+					<!-- Last 10 images -->
+					<figure><img src="./img/rw/rw11.jpg" alt="Cara Delevingne on Runway" /></figure>
+					<figure><img src="./img/rw/rw12.jpg" alt="Cara Delevingne on Runway" /></figure>
+					<figure><img src="./img/rw/rw13.jpg" alt="Cara Delevingne on Runway" /></figure>
+					<figure><img src="./img/rw/rw14.jpg" alt="Cara Delevingne on Runway" /></figure>
+					<figure><img src="./img/rw/rw15.jpg" alt="Cara Delevingne on Runway" /></figure>
+					<figure><img src="./img/rw/rw16.jpg" alt="Cara Delevingne on Runway" /></figure>
+					<figure><img src="./img/rw/rw17.jpg" alt="Cara Delevingne on Runway" /></figure>
+					<figure><img src="./img/rw/rw18.jpg" alt="Cara Delevingne on Runway" /></figure>
+					<figure><img src="./img/rw/rw19.jpg" alt="Cara Delevingne on Runway" /></figure>
+					<figure><img src="./img/rw/rw20.jpg" alt="Cara Delevingne on Runway" /></figure>
+
+				</article>
+			</section>
+		</main>
+
+		<footer class="scrollable">
+			<p>&copy; Mariann Madsen 2015</p>
+		</footer>
+
+		<script src="./js/script.js"></script>
+
+	</body>
 </html>
