--- a/random.html
+++ b/random.html
@@ -6,10 +6,10 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<link rel="stylesheet" href="./css/reset.css" />
+		<link rel="stylesheet" href="./css/normalize.css" />
 		<link rel="stylesheet" href="./css/basic.css" />
 	</head>
-	
+
 	<body>
 
 		<a id="nav-toggle" href="#"><span></span></a>
