Move aside to bottom of flow

--- a/blog.html
+++ b/blog.html
@@ -27,21 +27,7 @@
 		</header>
 
 		<main>
-			<aside>
-				<h2>About The Blog</h2>
-				<p>This blog is about Cara Delevingne and different news about her as well as all the weird opinions I have about her type of model. Feel free to contact me, if you have some news about her og you just want to say hi.</p>
-
-				<h2>Archive</h2>
-				<h3>2015</h3>
-				<ul>
-					<li>September (1)</li>
-					<li>August (4)</li>
-					<li>July (4)</li>
-					<li>June (4)</li>
-				</ul>
-			</aside>
-
-			<article id="two">
+			<article class="blogposts">
 
 				<!-- Blog Post 1 -->
 				<div class="blogpost">
@@ -82,6 +68,20 @@
 				</div>
 
 			</article>
+
+			<aside>
+				<h2>About The Blog</h2>
+				<p>This blog is about Cara Delevingne and different news about her as well as all the weird opinions I have about her type of model. Feel free to contact me, if you have some news about her og you just want to say hi.</p>
+
+				<h2>Archive</h2>
+				<h3>2015</h3>
+				<ul>
+					<li>September (1)</li>
+					<li>August (4)</li>
+					<li>July (4)</li>
+					<li>June (4)</li>
+				</ul>
+			</aside>
 		</main>
 
 		<footer class="scrollable">
