Optimizing gallery list page

--- a/gallery.html
+++ b/gallery.html
@@ -27,33 +27,23 @@
         </header>
 
         <main>
-        	<article id="three">
+        	<article>
                 <h2>Gallery</h2>
 
-            	<!-- Gallery List-->
-                <div id="gallerysection">
-
-                    <!-- Gallery 1 -->
-                    <ul class="sectionlist" id="runway">
-                        <li>
-                            <a href="./runway.html">
-                                <img src="./img/other/teaser1.jpg" alt="Cara Delevingne on Runway" />
-                                <span class="text-content"><span class="span1">Runway</span></span>
-                            </a>
-                        </li>
-                    </ul>
-
-                    <!-- Gallery 2 -->
-                    <ul class="sectionlist" id="random">
-                        <li>
-                            <a href="./random.html">
-                                <img src="./img/other//teaser2.jpg" alt="Cara Delevingne on Runway" />
-                                <span class="text-content"><span class="span1">Random</span></span>
-                            </a>
-                        </li>
-                    </ul>
-
-                </div> <!-- End of Gallery List -->
+                <article class="gallery-list">
+                    <section class="gallery-item">
+                        <a href="./runway.html">
+                            <img src="./img/other/teaser1.jpg" alt="Cara Delevingne on Runway" />
+                            <span class="gallery-title">Runway</span>
+                        </a>
+                    </section>
+                    <section class="gallery-item">
+                        <a href="./random.html">
+                            <img src="./img/other//teaser2.jpg" alt="Cara Delevingne on Runway" />
+                            <span class="gallery-title">Random</span>
+                        </a>
+                    </section>
+                </article>
 
             </article>
         </main>
