--- a/runway.html
+++ b/runway.html
@@ -27,7 +27,7 @@
 		</header>
 
 		<main>
-			<article id="subthree">
+			<article class="galleries">
 
 				<!-- First 10 images -->
 				<figure><img src="./img/rw/rw1.jpg" alt="Cara Delevingne on Runway" /></figure>
