--- a/random.html
+++ b/random.html
@@ -27,7 +27,7 @@
 		</header>
 
 		<main>
-			<article id="subthree">
+			<article class="galleries">
 
 				<!-- First 10 images -->
 				<figure><img src="./img/rd/rd1.jpg" alt="Cara Delevingne" /></figure>
