--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
 		</header>
 
 		<main>
-			<article id="four">
+			<article class="contact">
 				<h2>Contact me</h2>
 
 				<form action="action_page.php" method="post">
