--- a/blog.html
+++ b/blog.html
@@ -26,7 +26,7 @@
 			<h1>Cara Delevingne</h1>
 		</header>
 
-		<main>
+		<main class="blog">
 			<article class="blogposts">
 
 				<!-- Blog Post 1 -->
